# text2speechtest

./: CMakeLists.txt  README.md  main.cpp  main.qml  qml.qrc  qttextspeechtest.desktop  speechclient.cpp  speechclient.h
